--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -109,17 +109,7 @@
                       <div class="col-4 text-justify">
                         <p class="small" style="text-align: justify">
                           Misión <br />
-                          El Departamento de Comunicaciones e Informática,
-                          coordinará, regulará y controlará los procedimientos
-                          en el empleo de las comunicaciones, a través de las
-                          GG. UU, UU., UU. II y CC.EE. del Ejército, a partir
-                          del 301000OCT025, hasta la declaratoria de los
-                          resultados electorales en todo el territorio nacional,
-                          a fin de facilitar el comando y control, empleando
-                          medios disponibles para la recepción y transmisión de
-                          la información oportuna del Ejército, coadyuvando al
-                          cumplimiento de la misión de las Elecciones Generales
-                          2025.
+                          {{Mision}}
                         </p>
                       </div>
                       <div class="col-4">
@@ -132,18 +122,8 @@
                       </div>
                       <div class="col-4 text-justify">
                         <p class="small" style="text-align: justify">
-                          Intención del Comandante <br />
-                          El Departamento de Comunicaciones e Informática,
-                          coordinará, regulará y controlará los procedimientos
-                          en el empleo de las comunicaciones, a través de las
-                          GG. UU, UU., UU. II y CC.EE. del Ejército, a partir
-                          del 301000OCT025, hasta la declaratoria de los
-                          resultados electorales en todo el territorio nacional,
-                          a fin de facilitar el comando y control, empleando
-                          medios disponibles para la recepción y transmisión de
-                          la información oportuna del Ejército, coadyuvando al
-                          cumplimiento de la misión de las Elecciones Generales
-                          2025.
+                          Visión<br />
+                          {{Mision}}
                         </p>
                       </div>
                     </div>
