--- a/documentos/templates/core/header.html
+++ b/documentos/templates/core/header.html
@@ -9,7 +9,11 @@
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item"></li>
+    <li class="nav-item">
+      <span class="nav-link">
+        {{ request.user.first_name }} {{ request.user.last_name }}
+      </span>
+    </li>
   </ul>
 </nav>
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
