--- a/documentos/templates/documentacion/form_aprobacion.html
+++ b/documentos/templates/documentacion/form_aprobacion.html
@@ -114,6 +114,13 @@
                         >
                           Cumplimiento
                         </a>
+<a
+  class="dropdown-item text-info"
+  href="{% url 'imprimir_nota' notas_procesadas.id %}"
+  target="_blank"
+>
+  Imprimir
+</a>
                       </div>
                     </div>
                   </td>
