--- a/documentos/templates/documentacion/form_procesamiento.html
+++ b/documentos/templates/documentacion/form_procesamiento.html
@@ -125,6 +125,7 @@
                           Revisar
                         </a>
                         {% endif %}
+                        <a class="dropdown-item text-info" href="{% url 'imprimir_nota' ls_preregistro_notas.id %}" target="_blank"> Imprimir </a>
                       </div>
                     </div>
                   </td>
