--- a/documentos/templates/documentacion/form_aprobacion.html
+++ b/documentos/templates/documentacion/form_aprobacion.html
@@ -114,13 +114,7 @@
                         >
                           Cumplimiento
                         </a>
-<a
-  class="dropdown-item text-info"
-  href="{% url 'imprimir_nota' notas_procesadas.id %}"
-  target="_blank"
->
-  Imprimir
-</a>
+                         <a class="dropdown-item text-info"  href="{% url 'imprimir_nota' notas_procesadas.id %}" target="_blank"> Imprimir</a>
                       </div>
                     </div>
                   </td>
@@ -275,25 +269,30 @@
         </button>
       </div>
       <div class="modal-body">
-        <form
-          id="formRegistroCME"
-          method="POST"
-          enctype="multipart/form-data"
-          onsubmit="registrar_disposicion(event)"
-        >
+
           <input type="hidden" id="itemIdx" name="itemIdx" />
 
           <div class="row mb-3">
             <div class="col-md-12">
               <label for="contenido" class="form-label">Disposición</label>
-              <textarea
-                class="form-control"
-                id="contenido"
-                name="contenido"
-                rows="3"
-                required
-              ></textarea>
-
+              <textarea class="form-control" id="contenido" name="contenido" rows="3" required ></textarea>
+            </div>
+          </div>
+          <div id="div_adj_disp" class="mb-3">
+            <label class="form-label">Adjuntar Disposicion</label>
+            <div id="dropzone" class="border border-primary p-3 text-center" ondragover="event.preventDefault();">
+              <p> Arrastra y suelta archivos aquí o
+                <label for="fileInput" class="text-primary" style="cursor: pointer">selecciona</label>
+              </p>
+              <input type="file" id="fileInput" name="arch_notas_enviadas" multiple accept=".pdf,image/*" class="form-control d-none"/>
+              <ul id="fileList" class="list-unstyled mt-2"></ul>
+            </div>
+          </div>
+          <div id="div_visor_dispo" >
+            <label for="selectDocument2" class="form-label">Seleccione un documento:</label>
+            <select id="selectDocument2" class="form-select"></select>
+            <div class="mt-3">
+              <iframe id="visorDocument2" src="" width="100%" height="600px" style="border: none"></iframe>
             </div>
           </div>
           <div class="row mb-3">
@@ -305,7 +304,7 @@
                 class="form-control"
                 id="procedencia_sup"
                 name="procedencia_sup"
-                required
+                
               >
                 <option value="" selected>Seleccione...</option>
                 {% for procedencia in ls_procedencia %}
@@ -321,7 +320,7 @@
                 class="form-control"
                 id="sub_procedencia"
                 name="sub_procedencia"
-                required
+                
               >
                 <option value="">Seleccione...</option>
               </select>
@@ -342,11 +341,6 @@
             </div>
           </div>
           <input type="hidden" name="destinatarios" id="destinatariosInput" />
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-sm">
-              <i class="fas fa-save"></i> Guardar Registro
-            </button>
-          </div>
         </form>
       </div>
 
@@ -388,6 +382,8 @@
 
 <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/tabla.js' %}"></script>
+<script src="{% static 'js/func_notas_enviadas.js' %}"></script>
 <script src="{% static 'lib/adminlte/plugins/datatables/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'lib/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
 <script src="{% static 'lib/adminlte/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
@@ -395,33 +391,11 @@
 <script src="{% static 'lib/adminlte/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
 <script src="{% static 'lib/adminlte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
 <script>
-  $("#example1").DataTable({
-    language: {
-      decimal: "",
-      emptyTable: "No hay datos disponibles en la tabla",
-      info: "Mostrando _START_ a _END_ de _TOTAL_ entradas",
-      infoEmpty: "Mostrando 0 a 0 de 0 entradas",
-      infoFiltered: "(filtrado de _MAX_ entradas totales)",
-      infoPostFix: "",
-      thousands: ",",
-      lengthMenu: "Mostrar _MENU_ entradas",
-      loadingRecords: "Cargando...",
-      processing: "Procesando...",
-      search: "Buscar:",
-      zeroRecords: "No se encontraron registros coincidentes",
-      paginate: {
-        first: "Primero",
-        last: "Último",
-        next: "Siguiente",
-        previous: "Anterior",
-      },
-      aria: {
-        sortAscending: ": activar para ordenar la columna ascendente",
-        sortDescending: ": activar para ordenar la columna descendente",
-      },
-    },
-  });
-
+  var fileInput_Completar = "fileInput";
+  var dropzone_Completar = "dropzone";
+  var fileList_Completar = "fileList";
+  const div_adj_disp = document.getElementById("div_adj_disp");
+  const div_vis_disp = document.getElementById("div_visor_dispo");
   function info_procesado(id) {
     fetch(`/info_procesada/obtener/${id}/`)
       .then((response) => response.json())
@@ -459,7 +433,7 @@
       });
   }
 
-  function ver_cumplimiento(cumplimiento_id) {
+function ver_cumplimiento(cumplimiento_id) {
     fetch(`/ver_cumplimiento_nota/${cumplimiento_id}/`) // Vista Django que devuelve JSON con archivos
       .then((response) => response.json())
       .then((data) => {
@@ -510,13 +484,12 @@
             tabla.appendChild(tbody);
             contenedor.appendChild(tabla);
             const select = document.getElementById(`selectDocumento-${req.id}`);
-const visor = document.getElementById(`visorDocumento-${req.id}`);
-
-if (select && visor) {
-    select.addEventListener('change', () => {
-        visor.src = select.value;
-    });
-}
+            const visor = document.getElementById(`visorDocumento-${req.id}`);
+            if (select && visor) {
+              select.addEventListener('change', () => {
+                visor.src = select.value;
+              });
+            }
           });
         }
       });
@@ -633,10 +606,11 @@ let destinatarios = [];
 
   function llenarItemId(id) {
     document.getElementById("itemIdx").value = id;
-    fetch(`/obtener_disposicion/obtener/${id}/`)
+    fetch(`/obtener_disposicion/obtener/${id}/1/`)
       .then((response) => response.json())
       .then((data) => {
         document.querySelector('[name="contenido"]').value = data.disposicion;
+        id = data.id
       });
     destinatarios = [];
     actualizarListaDestinatarios();
@@ -648,6 +622,28 @@ let destinatarios = [];
         actualizarListaDestinatarios();
       });
 
+    fetch(`/revisar_disp_arch/${id}/`) // Vista Django que devuelve JSON con archivos
+      .then((response) => response.json())
+      .then((data) => {
+        const select = document.getElementById("selectDocument2");
+        const visor = document.getElementById("visorDocument2");
+        select.innerHTML = "";
+        data.archivos.forEach((doc) => {
+          let option = document.createElement("option");
+          option.value = doc.url;
+          option.textContent = doc.nombre;
+          select.appendChild(option);
+          
+        });
+        if (data.archivos.length > 0) {
+          visor.src = data.archivos[0].url;
+          div_adj_disp.style.display = "none"; 
+          div_vis_disp.style.display = "Block";
+        }else{
+          div_adj_disp.style.display = "Block";
+          div_vis_disp.style.display = "none"; 
+        }
+      });
   }
 function actualizarListaDestinatarios() {
   const lista = document.getElementById("listaDestinatarios");
