--- a/documentos/templates/documentacion/form_procesamiento.html
+++ b/documentos/templates/documentacion/form_procesamiento.html
@@ -1,17 +1,8 @@
 {% extends '../core/base.html' %} {% load static %} {% block 'contenido' %}
-<link
-  rel="stylesheet"
-  href="{% static 'lib/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}"
-/>
-<link
-  rel="stylesheet"
-  href="{% static 'lib/adminlte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}"
-/>
-<link
-  rel="stylesheet"
-  href="{% static 'lib/adminlte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}"
-/>
-
+<link rel="stylesheet" href="{% static 'lib/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}"/>
+<link rel="stylesheet" href="{% static 'lib/adminlte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}"/>
+<link rel="stylesheet" href="{% static 'lib/adminlte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/estilo_alerta.css' %}"/>
 <section class="content-header"></section>
 <section class="content">
   {% csrf_token %}
@@ -48,41 +39,17 @@
                   <td>{{ls_preregistro_notas.cod_usuario}}</td>
                   <td>
                     <div class="dropdown">
-                      <button
-                        class="btn btn-outline-primary btn-sm btn-block dropdown-toggle"
-                        type="button"
-                        id="accionesCentro{{ cme.id }}"
-                        data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                      >
+                      <button class="btn btn-outline-primary btn-sm btn-block dropdown-toggle" type="button" id="accionesCentro{{ cme.id }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Acciones
                       </button>
-                      <div
-                        class="dropdown-menu"
-                        aria-labelledby="accionesCentro{{ notas_procesadas.id }}"
-                      >
-                      
+                      <div class="dropdown-menu" aria-labelledby="accionesCentro{{ notas_procesadas.id }}">            
                         {% if ls_preregistro_notas.cod_estado_preregistro.id == 1  %}
-                        <a
-                          class="dropdown-item text-info"
-                          href="#"
-                          data-toggle="modal"
-                          data-target="#modalAgregar"
-                          onclick="procesar({{ls_preregistro_notas.id }})"
-                        >
+                        <a class="dropdown-item text-info" href="#" data-toggle="modal" data-target="#modalAgregar" onclick="procesar({{ls_preregistro_notas.id }})">
                           Procesar
                         </a>
-
                         {% endif %} 
                         {% if ls_preregistro_notas.cod_estado_preregistro.id >= 2  %}
-                                                <a
-                          class="dropdown-item text-info"
-                          href="#"
-                          data-toggle="modal"
-                          data-target="#modalrevisar"
-                          onclick="revisar({{ls_preregistro_notas.id }})"
-                        >
+                        <a class="dropdown-item text-info" href="#" data-toggle="modal" data-target="#modalrevisar" onclick="revisar({{ls_preregistro_notas.id }})">
                           Revisar
                         </a>
                         <a class="dropdown-item text-info" href="#" data-toggle="modal" data-target="#modal_expediente" onclick="ver_cumplimiento({{ls_preregistro_notas.id }})">
@@ -105,28 +72,13 @@
       </div>
     </div>
   </div>
-
 </section>
-
-<div
-  id="modalAgregar"
-  class="modal fade"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modal_info_procesadoLabel"
-  aria-hidden="true"
->
+<div id="modalAgregar" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal_info_procesadoLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
-    a
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Procesar documentación</h5>
-        <button
-          type="button"
-          class="btn btn-close btn-light"
-          data-dismiss="modal"
-          aria-label="Cerrar"
-        >
+        <button type="button" class="btn btn-close btn-light" data-dismiss="modal" aria-label="Cerrar" >
           Cerrar
         </button>
       </div>
@@ -137,34 +89,17 @@
           <div class="row mb-3">
             <div class="col-md-6">
               <label for="fechaNota" class="form-label">Fecha de Nota</label>
-              <input
-                type="datetime-local"
-                class="form-control"
-                id="fch_exp"
-                name="fch_exp"
-                required
-              />
+              <input type="datetime-local"  class="form-control" id="fch_exp"  name="fch_exp" required />
             </div>
             <div class="col-md-6">
               <label for="fechaLimite" class="form-label">Fecha Límite</label>
-              <input
-                type="datetime-local"
-                class="form-control"
-                id="fch_limite"
-                name="fch_limite"
-                required
-              />
+              <input  type="datetime-local" class="form-control" id="fch_limite" name="fch_limite"required/>
             </div>
           </div>
           <div class="row mb-3">
             <div class="col-md-6">
               <label for="prioridad" class="form-label">Prioridad</label>
-              <select
-                class="form-control"
-                id="tp_prioridad"
-                name="tp_prioridad"
-                required
-              >
+              <select class="form-control" id="tp_prioridad" name="tp_prioridad" required>
                 <option value="" selected>Seleccione...</option>
                 {% for prioridad in ls_tp_prioridad %}
                 <option value="{{ prioridad.id }}">
@@ -188,26 +123,12 @@
           <div class="row mb-3">
             <div class="col-md-12">
               <label for="contenido" class="form-label">Contenido</label>
-              <textarea
-                class="form-control"
-                id="contenido"
-                name="contenido"
-                rows="3"
-                required
-              ></textarea>
+              <textarea class="form-control" id="contenido" name="contenido" rows="3"required></textarea>
             </div>
           </div>
-                    <label for="selectDocumento" class="form-label"
-            >Seleccione un documento:</label
-          >
+          <label for="selectDocumento" class="form-label">Seleccione un documento:</label>
           <select id="selectDocumento" class="form-select"></select>
-            <iframe
-              id="visorDocumento"
-              src=""
-              width="100%"
-              height="600px"
-              style="border: none"
-            ></iframe>
+            <iframe id="visorDocumento" src="" width="100%" height="600px" style="border: none"></iframe>
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-primary" form="formAgregar">
@@ -218,14 +139,7 @@
     </div>
   </div>
 </div>
-<div
-  id="modalrevisar"
-  class="modal fade"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modalrevisarLabel"
-  aria-hidden="true"
->
+<div id="modalrevisar" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalrevisarLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
@@ -284,24 +198,12 @@
     </div>
   </div>
 </div>
-<div
-  id="modal_expediente"
-  class="modal fade"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modal_ver_expedienteLabel"
-  aria-hidden="true"
->
+<div  id="modal_expediente" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal_ver_expedienteLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Cumplimiento del Requerimiento</h5>
-        <button
-          type="button"
-          class="btn btn-close btn-light"
-          data-dismiss="modal"
-          aria-label="Cerrar"
-        >
+        <button type="button" class="btn btn-close btn-light" data-dismiss="modal" aria-label="Cerrar">
           Cerrar
         </button>
       </div>
@@ -311,36 +213,18 @@
     </div>
   </div>
 </div>
-<div
-  id="modal_info_aprobado"
-  class="modal fade"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modal_info_aprobadoLabel"
-  aria-hidden="true"
->
+<div id="modal_info_aprobado" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal_info_aprobadoLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header ">
         <h5 class="modal-title">Enviar Disposición</h5>
-        <button
-          type="button"
-          class="btn btn-close btn-light"
-          data-dismiss="modal"
-          aria-label="Cerrar"
-        >
+        <button type="button" class="btn btn-close btn-light" data-dismiss="modal" aria-label="Cerrar">
           Cerrar
         </button>
       </div>
       <div class="modal-body">
-        <form
-          id="formRegistroCME"
-          method="POST"
-          enctype="multipart/form-data"
-          onsubmit="registrar_disposicion(event)"
-        >
-          <input type="hidden" id="itemIdx" name="itemIdx" />
-
+        <form id="formRegistroCME" method="POST" enctype="multipart/form-data" onsubmit="registrar_disposicion(event)">
+          <input type="hidden" id="itemIdx" name="itemIdx"/>
           <div class="row mb-3">
             <div class="col-md-12">
               <label for="contenido" class="form-label">Disposición</label>
@@ -366,15 +250,8 @@
           </div>
           <div class="row mb-3">
             <div class="col-md-5">
-              <label for="disp_procedencia_sup" class="form-label"
-                >Procedencia</label
-              >
-              <select
-                class="form-control"
-                id="disp_procedencia_sup"
-                name="disp_procedencia_sup"
-                
-              >
+              <label for="disp_procedencia_sup" class="form-label">Procedencia</label>
+              <select class="form-control" id="disp_procedencia_sup" name="disp_procedencia_sup">
                 <option value="" selected>Seleccione...</option>
                 {% for procedencia in ls_procedencia %}
                 <option value="{{ procedencia.id }}">
@@ -385,21 +262,12 @@
             </div>
             <div class="col-md-5">
               <label for="sub_procedencia" class="form-label">Remitente</label>
-              <select
-                class="form-control"
-                id="disp_sub_procedencia"
-                name="disp_sub_procedencia"
-                
-              >
+              <select class="form-control" id="disp_sub_procedencia" name="disp_sub_procedencia">
                 <option value="">Seleccione...</option>
               </select>
             </div>
             <div class="col-md-2 d-flex align-items-end">
-              <button
-                type="button"
-                class="btn btn-success btn-block"
-                onclick="agregarDestinatario()"
-              >
+              <button type="button" class="btn btn-success btn-block" onclick="agregarDestinatario()">
                 Agregar
               </button>
             </div>
@@ -417,11 +285,8 @@
           </div>
         </form>
       </div>
-
       <div class="modal-footer">
-        <small class="text-muted"
-          >Complete todos los campos requeridos antes de guardar.</small
-        >
+        <small class="text-muted">Complete todos los campos requeridos antes de guardar.</small>
       </div>
     </div>
   </div>
@@ -644,24 +509,16 @@ function llenarItemId(id) {
   fetch(`/obtener_disposicion/obtener/${id}/2/`)
     .then((response) => response.json())
     .then((data) => {
-      // Actualizo el campo de texto
       document.querySelector('[name="disposicion"]').value = data.disposicion;
-      alert(data.disposicion)
-      // Actualizo el id con el que debe continuar
       const nuevoId = data.id;
-
       destinatarios = [];
       actualizarListaDestinatarios();
-
-      // Petición para los destinatarios
       fetch(`/nota_destinatarios/${nuevoId}/`)
         .then((response) => response.json())
         .then((data) => {
           destinatarios = data.destinatarios || [];
           actualizarListaDestinatarios();
         });
-
-      // Petición para los documentos
       fetch(`/revisar_disp_arch/${nuevoId}/`)
         .then((response) => response.json())
         .then((data) => {
