--- a/documentos/templates/core/header.html
+++ b/documentos/templates/core/header.html
@@ -80,7 +80,12 @@
             <p>Calendario</p>
           </a>
         </li>
-
+        <li class="nav-item">
+          <a href="{% url 'reporte_mensual' %}" class="nav-link">
+            <i class="nav-icon fas fa-calendar"></i>
+            <p>Reporte</p>
+          </a>
+        </li>
         <li class="nav-item mt-auto">
           <form
             action="{% url 'cerrar_sesion' %}"
