--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
-  <title>Plataforma</title>
+  <title>Gestor de Notas</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="{% static 'lib/adminlte/plugins/fontawesome-free/css/all.min.css' %}">
@@ -19,8 +19,7 @@
   referrerpolicy="no-referrer"
 />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
@@ -136,7 +135,6 @@
       </section>
       {% endblock %}
     </div>
-
     {% include 'core/footer.html' %}
   </div>
   <script src="{% static 'lib/adminlte/plugins/jquery/jquery.min.js' %}"></script>
