--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -122,7 +122,7 @@
                       <div class="col-4 text-justify">
                         <p class="small" style="text-align: justify">
                           Visión<br />
-                          {{Mision}}
+                          {{Vision}}
                         </p>
                       </div>
                     </div>
